Make Over & ExcelProcessingService

--- a/TennisStoreClient/Components/Home/Banner.razor
+++ b/TennisStoreClient/Components/Home/Banner.razor
@@ -30,7 +30,7 @@
         {
             new Slide
             {
-                ImageUrl = "/images/banner-1.jpg",
+                ImageUrl = "https://i.imgur.com/TOett97.jpeg",
                 AltText = "women's latest fashion sale",
                 Subtitle = "Trending item",
                 Title = "Women's latest fashion sale",
@@ -39,7 +39,7 @@
             },
             new Slide
             {
-                ImageUrl = "/images/banner-2.jpg",
+                ImageUrl = "https://i.imgur.com/g2L8iQZ.jpeg",
                 AltText = "modern sunglasses",
                 Subtitle = "Trending accessories",
                 Title = "Modern sunglasses",
@@ -48,7 +48,7 @@
             },
             new Slide
             {
-                ImageUrl = "/images/banner-3.jpg",
+                ImageUrl = "https://i.imgur.com/kZf1Dc8.jpeg",
                 AltText = "new fashion summer sale",
                 Subtitle = "Sale Offer",
                 Title = "New fashion summer sale",
