--- a/TennisStoreClient/Components/Home/BrandSlider.razor
+++ b/TennisStoreClient/Components/Home/BrandSlider.razor
@@ -1,20 +1,20 @@
 ﻿<div class="category">
     <div class="container">
-        <div class="category-item-container has-scrollbar">
+        <div class="brand-item-container has-scrollbar">
             @if (BrandService.AllBrands != null && BrandService.AllBrands.Any())
             {
                 @foreach (var brand in BrandService.AllBrands)
                 {
-                    <div class="category-item">
-                        <div class="category-img-box">
-                            <img src="@("/images/" + brand.LogoPath)" alt="a" width="30">
+                    <div class="brand-item">
+                        <div class="brand-img-box">
+                            <img src="@("/images/" + brand.LogoPath)" alt="a" width="40">
                         </div>
-                        <div class="category-content-box">
-                            <div class="category-content-flex">
-                                <h3 class="category-item-title">@brand.EnName</h3>
-                                <p class="category-item-amount">(@brand.ProductsCount)</p>
+                        <div class="brand-content-box">
+                            <div class="brand-content-flex">
+                                <h3 class="brand-item-title">@brand.EnName</h3>
+                                <p class="brand-item-amount">(@brand.ProductsCount)</p>
                             </div>
-                            <a href="@brand.EnName" class="category-btn">Show all</a>
+                            <a href="/b/@brand.EnName" class="brand-btn">Show all</a>
                         </div>
                     </div>
                 }
