--- a/TennisStoreClient/Components/Home/Sidebar.razor
+++ b/TennisStoreClient/Components/Home/Sidebar.razor
@@ -4,7 +4,7 @@
         <div class="sidebar-top">
             <h2 class="sidebar-title">קטגוריות</h2>
             <button class="sidebar-close-btn" data-mobile-menu-close-btn="">
-                <ion-icon name="close-outline"></ion-icon>
+                <i name="close-outline"></i>
             </button>
         </div>
 
