--- a/TennisStoreClient/Layout/MainLayout.razor
+++ b/TennisStoreClient/Layout/MainLayout.razor
@@ -12,11 +12,7 @@
     <Modal />
 
     <main>
-        <Banner />
-        <BrandSlider />
-        <ProductContainer />
-        <TestimonialsBox />
-        <Blog />
+        @Body
     </main>
 
     <Footer />
