--- a/TennisStoreClient/Pages/Home.razor
+++ b/TennisStoreClient/Pages/Home.razor
@@ -1,6 +1,14 @@
 ﻿@page "/"
+@using TennisStoreClient.Components.Home
+@using TennisStoreClient.Components.Home.Testimonials
 
-<FrontPageComponent></FrontPageComponent>
+<Banner />
+<BrandSlider />
+<ProductContainer />
+<TestimonialsBox />
+<Blog />
+
+@* <FrontPageComponent></FrontPageComponent>
 <div class="col-md-12 mt-5">
     <FeaturedProductsComponent></FeaturedProductsComponent>
-</div>
+</div> *@
