--- a/TennisStoreClient/Pages/ProductPages/BannerPage.razor
+++ b/TennisStoreClient/Pages/ProductPages/BannerPage.razor
@@ -24,7 +24,7 @@
                                     <i class="fa fa-cart-shopping"></i> SHOP NOW
                                 </button>
                             </div>
-                            <img src="@Banner1.Base64Img" width="150" height="200" class="float-end" />
+                            <img src="@Banner1.Image1" width="150" height="200" class="float-end" />
                         </div>
                     </div>
                 </div>
@@ -44,7 +44,7 @@
                                     <i class="fa fa-cart-shopping"></i> SHOP NOW
                                 </button>
                             </div>
-                            <img src="@Banner2.Base64Img" width="150" height="200" class="float-end" />
+                            <img src="@Banner2.Image1" width="150" height="200" class="float-end" />
                         </div>
                     </div>
                 </div>
