--- a/TennisStoreClient/Pages/ProductPages/FeaturedProductsComponent.razor
+++ b/TennisStoreClient/Pages/ProductPages/FeaturedProductsComponent.razor
@@ -22,7 +22,7 @@
                                         {
                                             <span class="badge bg-none d-flex align-items-center float-end" style="width:50px;height:20px;"></span>
                                         }
-                                        <img class="card-img-top childImage" src="@item.Base64Img" width="150" height="200" style="max-width:150px;min-width:150px; cursor:pointer;" @onclick="() => ViewProduct(item)" />
+                                        <img class="card-img-top childImage" src="@item.Image1" width="150" height="200" style="max-width:150px;min-width:150px; cursor:pointer;" @onclick="() => ViewProduct(item)" />
                                         <div id="productCover" class="bg-secondary text-white d-flex justify-content-center text-wrap">@item.Name</div>
                                     </div>
                                 </div>
