--- a/TennisStoreClient/Pages/ProductPages/FrontPageComponent.razor
+++ b/TennisStoreClient/Pages/ProductPages/FrontPageComponent.razor
@@ -20,7 +20,7 @@ else
                                 {
                                     <CarouselItem>
                                         <figure>
-                                            <img src="@product.Base64Img" width="250" height="380" class="float-end" style="cursor:pointer;" @onclick="() => ViewProduct(product)" />
+                                            <img src="@product.Image1" width="250" height="380" class="float-end" style="cursor:pointer;" @onclick="() => ViewProduct(product)" />
                                         </figure>
                                         <div class="d-flex justify-content-center">
                                             <div style="position:absolute; bottom:50px">
