--- a/TennisStoreClient/Shared/Footer/Footer.razor
+++ b/TennisStoreClient/Shared/Footer/Footer.razor
@@ -152,22 +152,22 @@
                     <ul class="social-link">
                         <li class="footer-nav-item">
                             <a href="#" class="footer-nav-link">
-                                <ion-icon name="logo-facebook" role="img" class="md hydrated" aria-label="logo facebook"></ion-icon>
+                                <i name="logo-facebook" role="img" class="md hydrated" aria-label="logo facebook"></i>
                             </a>
                         </li>
                         <li class="footer-nav-item">
                             <a href="#" class="footer-nav-link">
-                                <ion-icon name="logo-twitter" role="img" class="md hydrated" aria-label="logo twitter"></ion-icon>
+                                <i name="logo-twitter" role="img" class="md hydrated" aria-label="logo twitter"></i>
                             </a>
                         </li>
                         <li class="footer-nav-item">
                             <a href="#" class="footer-nav-link">
-                                <ion-icon name="logo-linkedin" role="img" class="md hydrated" aria-label="logo linkedin"></ion-icon>
+                                <i name="logo-linkedin" role="img" class="md hydrated" aria-label="logo linkedin"></i>
                             </a>
                         </li>
                         <li class="footer-nav-item">
                             <a href="#" class="footer-nav-link">
-                                <ion-icon name="logo-instagram" role="img" class="md hydrated" aria-label="logo instagram"></ion-icon>
+                                <i name="logo-instagram" role="img" class="md hydrated" aria-label="logo instagram"></i>
                             </a>
                         </li>
                     </ul>
@@ -180,8 +180,9 @@
         <div class="container">
             <img src="/images/payment.png" alt="payment method" class="payment-img">
             <p class="copyright">
-                Copyright © <a href="#">Anon</a> all rights reserved.
+                כל הזכויות שמורות © <a href="#">Tennis4You</a>.
             </p>
+
         </div>
     </div>
 
