--- a/TennisStoreClient/Shared/Header/HeaderTop.razor
+++ b/TennisStoreClient/Shared/Header/HeaderTop.razor
@@ -3,22 +3,22 @@
         <ul class="header-social-container">
             <li>
                 <a href="#" class="social-link">
-                    <ion-icon class="fa-brands fa-facebook"></ion-icon>
+                    <i class="fa-brands fa-facebook"></i>
                 </a>
             </li>
             <li>
                 <a href="#" class="social-link">
-                    <ion-icon class="fa-brands fa-twitter"></ion-icon>
+                    <i class="fa-brands fa-twitter"></i>
                 </a>
             </li>
             <li>
                 <a href="#" class="social-link">
-                    <ion-icon class="fa-brands fa-instagram"></ion-icon>
+                    <i class="fa-brands fa-instagram"></i>
                 </a>
             </li>
             <li>
                 <a href="#" class="social-link">
-                    <ion-icon class="fa-brands fa-linkedin"></ion-icon>
+                    <i class="fa-brands fa-linkedin"></i>
                 </a>
             </li>
         </ul>
