--- a/TennisStoreClient/Shared/Header/MobileNavigationMenu.razor
+++ b/TennisStoreClient/Shared/Header/MobileNavigationMenu.razor
@@ -1,19 +1,19 @@
 ﻿<div class="mobile-bottom-navigation">
     <button class="action-btn">
-        <ion-icon name="menu-outline"></ion-icon>
+        <i name="menu-outline"></i>
     </button>
     <button class="action-btn">
-        <ion-icon name="bag-handle-outline"></ion-icon>
+        <i name="bag-handle-outline"></i>
         <span class="count">0</span>
     </button>
     <button class="action-btn">
-        <ion-icon name="home-outline"></ion-icon>
+        <i name="home-outline"></i>
     </button>
     <button class="action-btn">
-        <ion-icon name="heart-outline"></ion-icon>
+        <i name="heart-outline"></i>
         <span class="count">0</span>
     </button>
     <button class="action-btn">
-        <ion-icon name="grid-outline"></ion-icon>
+        <i name="grid-outline"></i>
     </button>
 </div>
