--- a/TennisStoreClient/Shared/Modals/Modal.razor
+++ b/TennisStoreClient/Shared/Modals/Modal.razor
@@ -2,7 +2,7 @@
     <div class="modal-close-overlay" data-modal-overlay=""></div>
     <div class="modal-content">
         <button class="modal-close-btn" @onclick="CloseModal" id="closeModalButton" data-modal-close="">
-            <ion-icon class="fa-solid fa-x fa-2xs"></ion-icon>
+            <i class="fa-solid fa-x fa-2xs"></i>
         </button>
         <div class="newsletter-img">
             <img src="@ImageUrl" alt="@ImageAlt" width="400" height="400">
