--- a/TennisStoreClient/Shared/Notifications/NotificationToast.razor
+++ b/TennisStoreClient/Shared/Notifications/NotificationToast.razor
@@ -1,6 +1,6 @@
 ﻿<div class="notification-toast @(IsOpen ? "" : "closed")" data-toast="">
     <button class="toast-close-btn" @onclick="CloseToast" data-toast-close="">
-        <ion-icon name="close-outline" role="img" class="md hydrated fa-solid fa-x fa-2xs" aria-label="close outline"></ion-icon>
+        <i name="close-outline" role="img" class="md hydrated fa-solid fa-x fa-2xs" aria-label="close outline"></i>
     </button>
 
     <div class="toast-banner">
