--- a/TennisStoreClient/Components/Home/ProductCard.razor
+++ b/TennisStoreClient/Components/Home/ProductCard.razor
@@ -1,19 +1,26 @@
 ﻿<div class="showcase">
-    <a href="#" class="showcase-img-box">
-        <img src="@Product.Base64Img" alt="@Product.Name" class="showcase-img" width="70" height="70">
-    </a>
+    <NavLink class="showcase-img-box" href="@($"/product/{Product.Id}")">
+        <img src="@Product.Image1" alt="@Product.Name" class="showcase-img" width="70" height="70">
+    </NavLink>
 
     <div class="showcase-content">
-        <a href="#">
+        <NavLink href="@($"/product/{Product.Id}")">
             <h4 class="showcase-title">@Product.Name</h4>
-        </a>
-        <a href="#" class="showcase-category">@Product.Category.Name</a>
+        </NavLink>
+        <NavLink href="@($"/category/{Product.CategoryId}")" class="showcase-category">
+            @Product.Category?.Name
+        </NavLink>
         <div class="price-box">
             <span class="price">₪@Product.Price</span>
-            <del>₪@Product.OldPrice</del>
+            @if (Product.OldPrice > 0)
+            {
+                <del>₪@Product.OldPrice</del>
+            }
         </div>
     </div>
 </div>
+
+
 
 @code {
     [Parameter]
