--- a/TennisStoreClient/Components/Home/ProductShowcase.razor
+++ b/TennisStoreClient/Components/Home/ProductShowcase.razor
@@ -8,7 +8,7 @@
             {
                 <div class="showcase">
                     <a href="#" class="showcase-img-box">
-                        <img src="@product.Base64Img" alt="@product.Name" width="75" height="75" class="showcase-img">
+                        <img src="@product.Image1" alt="@product.Name" width="75" height="75" class="showcase-img">
                     </a>
                     <div class="showcase-content">
                         <a href="#">
