--- a/TennisStoreClient/Pages/ProductPages/AddOrUpdateProductComponent.razor
+++ b/TennisStoreClient/Pages/ProductPages/AddOrUpdateProductComponent.razor
@@ -78,7 +78,7 @@
     {
         MessageDialogService.ShowSaveButton = false;
         MessageDialogService.ShowBusyButton = !MessageDialogService.ShowSaveButton;
-        if (string.IsNullOrEmpty(MyProduct.Base64Img))
+        if (string.IsNullOrEmpty(MyProduct.Image1))
         {
             MessageDialogService.messageDialog!.SetDialogValues("warning", "You need to choose image");
             MessageDialogService.SetMessageDialog();
@@ -108,7 +108,7 @@
         var resizeImage = await e.File.RequestImageFileAsync(format, 300, 300);
         var buffer = new byte[resizeImage.Size];
         await resizeImage.OpenReadStream().ReadAsync(buffer);
-        MyProduct.Base64Img = $"data:{format};base64,{Convert.ToBase64String(buffer)}";
+        MyProduct.Image1 = $"data:{format};base64,{Convert.ToBase64String(buffer)}";
         ImageUploadMessage = "";
     }
 
