--- a/TennisStoreClient/Pages/ProductPages/ProductDetails.razor
+++ b/TennisStoreClient/Pages/ProductPages/ProductDetails.razor
@@ -9,7 +9,7 @@
                 <div class="card-header">Product Details</div>
                 <div class="card-body">
                     <div class="d-flex justify-content-between">
-                        <img src="@Product!.Base64Img" width="150" height="250" />
+                        <img src="@Product!.Image1" width="150" height="250" />
                         <div class="card-body">
                             <p>
                                 <div class="vstack gap-2">
