--- a/TennisStoreClient/Pages/ProductPages/RecommendedPage.razor
+++ b/TennisStoreClient/Pages/ProductPages/RecommendedPage.razor
@@ -17,7 +17,7 @@
                                             <div class="col-lg-2 card-container-display" style="cursor:pointer;" @onclick="() => ViewProduct(product)">
                                                 <div class="card border-success shadow">
                                                     <div class="card-body d-flex justify-content-between">
-                                                        <img src="@product.Base64Img" width="100" height="150" class="d-flex justify-content-center" style="margin-right:5px;"  />
+                                                        <img src="@product.Image1" width="100" height="150" class="d-flex justify-content-center" style="margin-right:5px;"  />
                                                         <div class="vstack gap1">
                                                             <h5>@product.Name</h5>
                                                             <h6>@(General.GetDescription(product.Description!))</h6>
