--- a/TennisStoreClient/Shared/Header/HeaderMain.razor
+++ b/TennisStoreClient/Shared/Header/HeaderMain.razor
@@ -1,26 +1,38 @@
-﻿<div class="header-main">
+﻿@using TennisStoreClient.Shared.Login
+<div class="header-main">
     <div class="container">
-        <a href="#" class="header-logo">
-            <img src="images/TENIS4.svg" alt="Tennis4You logo" width="120">
+        <a href="/" class="header-logo">
+            <img src="images/Logos/MainLogo.svg" alt="Tennis4You logo" width="120">
         </a>
         <div class="header-search-container">
             <input type="search" name="search" class="search-field" placeholder="מה תרצה לחפש היום?">
             <button class="search-btn">
-                <ion-icon name="search-outline"></ion-icon>
+                <i name="search-outline"></i>
             </button>
         </div>
         <div class="header-user-actions">
-            <button class="action-btn">
-                <ion-icon class="fa-regular fa-user fa-2xs"></ion-icon>
+            <button class="action-btn" @onclick="OpenModal">
+                <i class="fa-regular fa-user fa-2xs"></i>
             </button>
             <button class="action-btn">
-                <ion-icon class="fa-regular fa-heart fa-2xs"></ion-icon>
+                <i class="fa-regular fa-heart fa-2xs"></i>
                 <span class="count">0</span>
             </button>
             <button class="action-btn">
-                <ion-icon class="fa-solid fa-bag-shopping fa-2xs"></ion-icon>
+                <i class="fa-solid fa-bag-shopping fa-2xs"></i>
                 <span class="count">0</span>
             </button>
         </div>
     </div>
 </div>
+
+@* <LoginModal IsModalOpen="IsModalOpen" /> *@
+
+@code {
+    private bool IsModalOpen = false;
+
+    private void OpenModal()
+    {
+        IsModalOpen = true;
+    }
+}
