--- a/TennisStoreClient/wwwroot/css/style-prefix.css
+++ b/TennisStoreClient/wwwroot/css/style-prefix.css
@@ -98,7 +98,7 @@ button {
     cursor: pointer;
 }
 
-img, ion-icon, button, a {
+img, i, button, a {
     display: block;
 }
 
@@ -380,7 +380,7 @@ body {
         opacity: 0.9;
     }
 
-    .modal-close-btn ion-icon {
+    .modal-close-btn i {
         --ionicon-stroke-width: 70px;
     }
 
@@ -519,7 +519,7 @@ body {
     color: var(--sonic-silver);
 }
 
-    .toast-close-btn ion-icon {
+    .toast-close-btn i {
         --ionicon-stroke-width: 50px;
     }
 
@@ -734,7 +734,7 @@ body {
     font-size: 22px;
 }
 
-    .menu-close-btn ion-icon {
+    .menu-close-btn i {
         --ionicon-stroke-width: 50px;
     }
 
@@ -773,7 +773,7 @@ body {
     font-size: 14px;
 }
 
-.accordion-menu ion-icon {
+.accordion-menu i {
     color: var(--onyx);
     --ionicon-stroke-width: 90px;
 }
@@ -993,7 +993,7 @@ body {
     margin-bottom: 30px;
 }
 
-.category-item-container {
+.brand-item-container {
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
@@ -1010,7 +1010,7 @@ body {
     overscroll-behavior-inline: contain;
 }
 
-.category-item {
+.brand-item {
     min-width: 100%;
     display: -webkit-box;
     display: -webkit-flex;
@@ -1028,19 +1028,19 @@ body {
     scroll-snap-align: start;
 }
 
-.category-img-box {
+.brand-img-box {
     background: var(--cultured);
     border: 1px solid hsl(0, 0%, 80%);
-    padding: 10px;
+    padding: 5px;
     -webkit-border-radius: var(--border-radius-sm);
     border-radius: var(--border-radius-sm);
 }
 
-.category-content-box {
+.brand-content-box {
     width: 100%;
 }
 
-.category-content-flex {
+.brand-content-flex {
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
@@ -1056,19 +1056,19 @@ body {
     margin-bottom: 10px;
 }
 
-.category-item-title {
+.brand-item-title {
     color: var(--eerie-black);
     font-size: var(--fs-9);
     font-weight: var(--weight-600);
     text-transform: uppercase;
 }
 
-.category-item-amount {
+.brand-item-amount {
     color: var(--sonic-silver);
     font-size: var(--fs-11);
 }
 
-.category-btn {
+.brand-btn {
     color: var(--tennis-ball-yellow);
     font-size: var(--fs-9);
     font-weight: var(--weight-500);
@@ -1143,7 +1143,7 @@ body {
     font-weight: var(--weight-600);
 }
 
-    .sidebar-close-btn ion-icon {
+    .sidebar-close-btn i {
         --ionicon-stroke-width: 50px;
     }
 
@@ -1182,7 +1182,7 @@ body {
     font-weight: var(--weight-500);
 }
 
-.sidebar-accordion-menu ion-icon {
+.sidebar-accordion-menu i {
     color: var(--sonic-silver);
     font-size: 14px;
     --ionicon-stroke-width: 70px;
@@ -2028,7 +2028,7 @@ body {
     transition: var(--transition-timing);
 }
 
-    .service-icon ion-icon {
+    .service-icon i {
         --ionicon-stroke-width: 25px;
     }
 
@@ -2281,7 +2281,7 @@ footer {
         font-size: 25px;
     }
 
-        .footer-nav-item .icon-box ion-icon {
+        .footer-nav-item .icon-box i {
             --ionicon-stroke-width: 30px;
         }
 
@@ -2574,11 +2574,11 @@ footer {
    * #CATEGORY
    */
 
-    .category-item-container {
+    .brand-item-container {
         gap: 30px;
     }
 
-    .category-item {
+    .brand-item {
         min-width: -webkit-calc(50% - 15px);
         min-width: calc(50% - 15px);
     }
@@ -2754,8 +2754,8 @@ footer {
    * #CATEGORY 
    */
 
-    .category-img-box {
-        padding: 20px;
+    .brand-img-box {
+        padding: 5px;
     }
 
 
@@ -3099,11 +3099,12 @@ footer {
     }
 
     .panel-list-item img {
-        width: 100%;
-        height: auto;
+        width: 50px; 
+        height: 50px; 
         -webkit-border-radius: var(--border-radius-sm);
         border-radius: var(--border-radius-sm);
     }
+
 
     .dropdown-list {
         position: absolute;
@@ -3193,13 +3194,13 @@ footer {
    * #CATEGORY 
    */
 
-    .category-item {
+    .brand-item {
         min-width: -webkit-calc(33.33% - 20px);
         min-width: calc(33.33% - 20px);
     }
 
-    .category-img-box {
-        padding: 10px;
+    .brand-img-box {
+        padding: 5px;
     }
 
 
@@ -3421,12 +3422,12 @@ footer {
    * #CATEGORY
    */
 
-    .category-item {
+    .brand-item {
         min-width: -webkit-calc(25% - 22.5px);
         min-width: calc(25% - 22.5px);
     }
 
-    .category-item-title {
+    .brand-item-title {
         --fs-9: 0.824rem;
     }
 
